--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,9 +1,15 @@
 server {
     listen 80;
     index index.php index.html;
-    server_name localhost;
+    server_name localhost 127.0.0.1 *.local;
 
     root /var/www/public;
+    index index.php index.html;
+
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
+
+    client_max_body_size 20M;
 
     location / {
         try_files $uri $uri/ /index.php?$args;
