--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -15,6 +15,11 @@ server {
         try_files $uri $uri/ /index.php?$args;
     }
 
+    location /storage/ {
+        alias /var/www/storage/app/public;
+        autoindex on;
+    }
+
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php:9000;
