--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./src:/var/www/
+      - ./storage:/var/www/storage
     depends_on:
       - php
 
@@ -15,6 +16,7 @@ services:
     build: ./docker/php
     volumes:
       - ./src:/var/www/
+      - ./storage:/var/www/storage
     ports:
       - "8000:8000"
 
