出品画面作成中

--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -1,5 +1,9 @@
 date.timezone = "Asia/Tokyo"
 
+[Session]
+session.save_handler = files
+session.save_path = "/var/www/storage/framework/sessions"
+
 [mbstring]
 mbstring.internal_encoding = "UTF-8"
 mbstring.language = "Japanese"
