出品画面バリデ完了

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,6 +1,5 @@
 server {
     listen 80;
-    index index.php index.html;
     server_name localhost 127.0.0.1 *.local;
 
     root /var/www/public;
@@ -12,12 +11,12 @@ server {
     client_max_body_size 20M;
 
     location / {
-        try_files $uri $uri/ /index.php?$args;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     location /storage/ {
     alias /var/www/storage/app/public/;
-    autoindex on;
+    try_files $uri $uri/ =404;
     }
 
     location ~ \.php$ {
