--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -7,3 +7,6 @@ session.save_path = "/var/www/storage/framework/sessions"
 [mbstring]
 mbstring.internal_encoding = "UTF-8"
 mbstring.language = "Japanese"
+
+upload_max_filesize = 50M
+post_max_size = 50M
