--- a/default.conf
+++ b/default.conf
@@ -1,12 +1,22 @@
 server {
-    listen 8081;
-    index index.php index.html;
-    server_name localhost;
+    listen 80;
+    server_name localhost 127.0.0.1 *.local;
 
     root /var/www/public;
+    index index.php index.html;
+
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
+
+    client_max_body_size 50M;
 
     location / {
-        try_files $uri $uri/ /index.php?$args;
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    location /storage/ {
+    alias /var/www/storage/app/public/;
+    try_files $uri $uri/ =404;
     }
 
     location ~ \.php$ {
