--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     volumes:
       - ./src:/var/www/
       - ./storage:/var/www/storage
+      - ./docker/php/php.ini:/usr/local/etc/php/php.ini
     ports:
       - "8000:8000"
 
